--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -70,3 +70,7 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=False
+
